--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,23 +9,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <table class="table">
-      <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Author</th>
-      </tr>
-      <% @blogs.each do |blog| %>
-        <tr>
-          <td><%= blog.id %></td>
-          <td>
-            <%= link_to blog.title, blog_path(blog) %>  
-          </td>
-          <td><%= blog.user.username %></td>
-        </tr>
-      <% end -%>
-    </table>
-
-    <%= will_paginate @blogs %>
+    <%= render 'blogs' %>
   </div>
 </div>
