--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,19 @@
                 <a class="nav-link" href="<%= users_path %>">User</a>
               </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="<%= blogs_path %>">Blog</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="<%= messages_path %>">Messages</a>
+              </li>
+
               <% if logged_in? %>
                 <li class="nav-item"><%= link_to "#{current_user.username}, exit", session_path(session[:user_id]), data: { "turbo-method": :delete }, class: 'nav-link' %></li>
               <% else %>
                 <li class="nav-item"><%= link_to "Login", new_session_path, class: 'nav-link' %></li>
               <% end %>
-
-              <li class="nav-item"><%= link_to "Blog", blogs_path, class: 'nav-link' %></li>
 
             </ul>
           </div>
