--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,13 +10,37 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ 
  *= require_self
  */
 
-// @import "bootstrap-sprockets";
 @import "bootstrap";
 
 .body-offset {
-    margin-top: 50px;
-  }
+  margin-top: 100px;
+}
+
+.navbar {
+  background: linear-gradient(45deg, #6DD5FA, #FF758C); 
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+  border-bottom: 1px solid rgba(255,255,255,0.3); 
+}
+
+.navbar-brand {
+  font-size: 1.5em;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
+.navbar-nav .nav-link {
+  color: #fff;
+  font-weight: normal;
+  transition: color 0.3s, background-color 0.3s;
+}
+
+.navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus {
+  color: #000;
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 3px;
+}
