--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,11 @@
+<head>
+  <%= stylesheet_link_tag 'login_page', media: 'all', 'data-turbolinks-track': 'reload' %>
+</head>
+
 <h1>User Registration</h1>
 
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-md-4">
     <%= form_with model: @user, url: users_path, method: :post, local: true do |f| %>
       <% if @user.errors.any? %>
         <div class="alert alert-danger">
@@ -24,9 +28,5 @@
       <%= f.submit "Registration", class: "btn btn-primary" %> 
       <%= link_to "Login", new_session_path, class: "btn btn-link" %>
     <% end %>
-  </div>
-
-  <div class="col-md-7">
-    <!-- Optional content can go here -->
   </div>
 </div>
