--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,27 @@
+<head>
+  <%= stylesheet_link_tag 'welcome', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+</head>
+
+
 <% if @user %>
   <h1>Welcome, <%= @user.username %>!</h1>
 <% else %>
   <h1>Welcome to ClassmateConnect's Homepage!</h1>
-  <p>
-    Explore our features and services. If you have an account, please log in to access all of our features.
-  </p>  
+  <p>Explore our features and services. If you have an account, please log in to access all of our features.</p>  
 <% end %>
+
+<div class="portal">
+  <%= link_to users_path, class: 'portal-link' do %>
+    <i class="fas fa-user icon"></i> User
+  <% end %>
+
+  <%= link_to blogs_path, class: 'portal-link' do %>
+    <i class="fas fa-blog icon"></i> Blog
+  <% end %>
+
+  <%= link_to messages_path, class: 'portal-link' do %>
+    <i class="fas fa-envelope icon"></i> Messages
+  <% end %>
+</div>
+
