--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -14,25 +14,52 @@
     html {
       height: 100%;
     }
+
+    .box{
+          margin: 30px;
+          border: 2px solid #D9D9D9;
+          -webkit-border-radius: .4em;
+          -moz-border-radius: .4em;
+          border-radius: .4em;
+          width: 400px;
+          padding: 30px 0;
+          justify-content: center;
+          padding: initial;
+          /* padding-left: 80px; */
+          
+    }
+    .title{
+      text-align: center;
+    }
+    .row{
+      padding-left: 20px;
+    }
   </style>
   <body>
-    <h1>Message</h1>
-
-    <div class="row">
-      <div class="col-md-5">
-        <p>From: <%= @message.sender.username %></p>
-        <p>To: <%= @message.receiver.username %></p>
-        <p><%= @message.content %></p>
-
-        <% if @message.receiver == current_user %>
-          <%= link_to "Reply", new_message_path(receiver_username: @message.sender.username), class: "btn btn-link" %>
-        <% end -%>
+    <div class = "box">
+      <div class = "title">
+        <h1>Message</h1>
       </div>
+      <hr/>
+      <div class="row">
+        <div class="col-md-5">
+          <p>From: <%= @message.sender.username %></p>
+          <p>To: <%= @message.receiver.username %></p>
+          <p><%= @message.content %></p>
 
-      <div class="col-md-7">
-        <!-- Other content or empty space -->
+          <% if @message.receiver == current_user %>
+            <%= link_to "Reply", new_message_path(receiver_username: @message.sender.username), class: "btn btn-link" %>
+          <% end -%>
+        </div>
+
+        <div class="col-md-7">
+          <!-- Other content or empty space -->
+        </div>
       </div>
     </div>
+    
+
+    
 
   </body>
 </html>
