--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,43 @@
-<h1>User List</h1>
+<html>
+  <style>
+    body {
+    background-repeat: no-repeat;
+    }
 
-<div class="row">
-  <div class="col-md-12">
-    <table class="table">
-      <tr>
-        <th>ID</th>
-        <th>User Name</th>
-        <th></th>
-      </tr>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.id %></td>
-          <td><%= user.username %></td>
-          <td></td>
-        </tr>
-      <% end -%>
-    </table>
+    body {
+        /* background: linear-gradient(#e66465, #9198e5); */
+        color: #fff;
+        /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+        /* background-image: linear-gradient(to top, #ebbba7 0%, #cfc7f8 100%); */
+        background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+    }
+    html {
+      height: 100%;
+    }
+  </style>
+  <body>
+    <h1>User List</h1>
 
-    <%= will_paginate @users %>
-  </div>
-</div>
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table">
+          <tr>
+            <th>ID</th>
+            <th>User Name</th>
+            <th></th>
+          </tr>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.id %></td>
+              <td><%= user.username %></td>
+              <td></td>
+            </tr>
+          <% end -%>
+        </table>
+
+        <%= will_paginate @users %>
+      </div>
+    </div>
+  </body>
+  
+</html>
