--- a/app/views/users/blogs.html.erb
+++ b/app/views/users/blogs.html.erb
@@ -1,12 +1,33 @@
-<h1>Blog of <%= current_user.username %></h1>
+<html>
+  <style>
+    body {
+    background-repeat: no-repeat;
+    }
 
-<div>
-  <%= link_to "Create a blog", new_blog_path, class: "btn btn-primary" %>
-  <%= link_to "My blog", blogs_user_path(current_user), class: "btn btn-primary" %>
-</div>
+    body {
+        /* background: linear-gradient(#e66465, #9198e5); */
+        color: #fff;
+        /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+        /* background-image: linear-gradient(to top, #ebbba7 0%, #cfc7f8 100%); */
+        background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+    }
+    html {
+      height: 100%;
+    }
+  </style>  
+  <body>
+    <h1>Blog of <%= current_user.username %></h1>
 
-<div class="row">
-  <div class="col-sm-12">
-    <%= render 'blogs/blogs' %>
-  </div>
-</div>
+    <div>
+      <%= link_to "Create a blog", new_blog_path, class: "btn btn-primary" %>
+      <%= link_to "My blog", blogs_user_path(current_user), class: "btn btn-primary" %>
+    </div>
+    <br>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <%= render 'blogs/blogs' %>
+      </div>
+    </div>
+  </body>
+</html>
