--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,31 +1,72 @@
 <html>
   <style>
-    body {
-      background-repeat: no-repeat;
-    }
-
-    body {
-        /* background: linear-gradient(#e66465, #9198e5); */
-        color: #fff;
-        /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
-        /* background-image: linear-gradient(to top, #ebbba7 0%, #cfc7f8 100%); */
-        background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
-    }
     html {
       height: 100%;
     }
+
+    body {
+      background-repeat: no-repeat;
+      color: #fff;
+      background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+    }
+
+
+    .title{
+      text-align: center;
+      font-size: 48px;
+      font-weight: bold;
+    }
+
+    .info{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #E8E7EB;
+      margin: 2rem 0;
+    }
+
+    .text {
+      font-size: 20px;
+    }
   </style>
   <body>
-    <h1><%= @blog.title %></h1>
 
-    <div class="row">
-      <div class="col-sm-5">
-        <p>Author: <%= @blog.user.username %>, <%= @blog.created_at %></p>
-        <%= @blog.content %>
+    <div class="content_block">
+      <div class="conent">
+        <div class="info">
+          <p><strong>Author: </strong> <%= @blog.user.username %></p>
+          <p><strong>Date: </strong><%= @blog.created_at %></p>
+        </div>
+        <div class="text">
+          <%= @blog.content %>
+        </div>
       </div>
 
       <div class="col-sm-7">
       </div>
+    </div>
+
+
+
+
+    <div class="title"><%= @blog.title %></div>
+
+    <div class="content_block">
+      <div class="conent">
+        <div class="info">
+
+        <p><strong>Author: </strong> <%= @blog.user.username %></p>
+        <p><strong>Date: </strong> <%= @blog.created_at %></p>
+        <%= @blog.content %>
+      </div>
+
+      <div class="text">
+        <%= @blog.content %>
+      </div>
+    </div>
+
+    <div class="col-sm-7">
+
     </div>
   </body>
 </html>
